src/objects/Trade_Ally_Referral__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Trade Ally Referrals</relationshipLabel>
        <relationshipName>Trade_Ally_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Age__c</fullName>
        <formula>IF(
    ISNULL(Assignment_Date__c),
    &apos;&apos;,
    IF(
        ISNULL(Converted_Date__c),
        IF(
            Assignment_Date__c + 9 &gt;=  TODAY(),
            IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Green&apos;),
            IF (
                Assignment_Date__c + 29 &gt;= TODAY(),
                IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;Yellow&apos;),
                IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;Red&apos;)
            )
        ),
        IF(
            Assignment_Date__c + 9 &gt;= Converted_Date__c,
            IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Green&apos;),
            IF (
                Assignment_Date__c + 29 &gt;= Converted_Date__c,
                IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;Yellow&apos;),
                IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;Red&apos;)
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Customer Contacted</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <isActive>false</isActive>
                    <label>Created</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Trade Ally Referrals</relationshipLabel>
        <relationshipName>Trade_Ally_Referrals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <label>Trade Ally</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally Referrals</relationshipLabel>
        <relationshipName>Trade_Ally_Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Trade Ally Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referral__c</columns>
        <columns>Trade_Ally__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Trade_Ally_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Referral__c</columns>
        <columns>Trade_Ally__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Trade Ally Referrals</label>
    </listViews>
    <nameField>
        <label>Trade Ally Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Ally Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>